2005/06/06	kaffeetisch

	* Glib.pm, MANIFEST, META.yml, NEWS, README: Unstable release
	1.091.

2005/05/30	kaffeetisch

	* xs/GKeyFile.xs: Fix the g_key_file_get_keys XSUB to actually
	return anything, and make it omit NULLs.  Fix an incorrect offset
	in the g_key_file_set_locale_string_list XSUB.  Replace "const
	gchar const **" with "const gchar * const *" where appropriate.

	* xs/GObject.xs (Glib::Object::set_threadsafe): Mark `threadsafe'
	as unused in the !GPERL_THREAD_SAFE branch.

	* typemap: Add a GSignalFlags typemap.  The corresponding
	converters already exist and are exported.

	* t/2.t: Test Glib::Object::freeze_notify and thaw_notify.

	* t/7.t: Test Glib::Object::signal_stop_emission_by_name,
	signal_handler_block, signal_handler_unblock and
	signal_handler_is_connected.

	* t/9.t: Test Glib::main_depth, Glib::MainLoop::is_running,
	Glib::MainLooP::get_context, Glib::MainContext::new,
	Glib::MainContext::default and Glib::MainContext::pending.

	* t/c.t: Test the union operator of flags.

	* t/g.t: Test Glib::KeyFile::set_locale_string_list,
	get_locale_string_list, set_string_list, set_locale_string,
	set_comment, set_boolean, set_value, get_keys, remove_comment,
	remove_key, remove_group, to_data and set_list_separator.

2005/05/22	kaffeetisch

	* Glib.xs: Initialize filename and hostname in filename_from_uri.

	* t/filename.t: Add tests for the filename conversion facilities.

	* t/a.t: Correct existing and add new tests for Glib::Log.  Test
	set_fatal_mask and set_always_fatal.

2005/04/27	ebassi

	* doctypes: fix typo for GKeyFileFlags.

2005/04/27	ebassi

	* Glib.xs, GError.xs, doctypes, gperl-gtypes.c, gperl-gtypes.h,
	gperl.h, Makefile.PL, MANIFEST, typemap, GKeyFile.xs, t/g.t: bind,
	document and test GKeyFile, a parser for .ini-like files.

2005/04/25	kaffeetisch

	* Glib.pm, META.yml, Makefile.PL, NEWS, README: Unstable release
	1.090.

2005/04/19	rwmcfa1

	* GenPod.pm: fixed long running auto list of enums/flags problems.