@@ -1,3 +1,12 @@
+2005/06/20	kaffeetisch
+
+	* xs/GLog.xs (gperl_log_handler): Set perl's context to the one
+	gperl_handle_logs_for() was called in.  This is to make sure
+	Perl_form accesses a valid memory pool, which prevents segfaults
+	when the log handler is called from a different thread.
+
+	* xs/GType.xs: Fix a typo in gperl_package_from_type's POD.
+
 2005/06/06	kaffeetisch
 
 	* Glib.pm, MANIFEST, META.yml, NEWS, README: Unstable release
